2003-04-21  Anna Marie Dirks  <anna@ximian.com>

	* e-shell-folder-commands.c (delete_dialog): Corrected border 
	with for Delete Folder dialog. Fixes 41036. 
	(e_shell_command_copy_folder): Corrected capitalization of the "Copy
	Folder" window title. Partial fix for 41025. 
	(e_shell_command_move_folder): Corrected the capitalization of the
	"Move Folder" dialog. Fixes 41024.


2003-04-21  Anna Marie Dirks  <anna@ximian.com>
	
	* e-shell-folder-selection-dialog.c 
	(e_shell_folder_selection_dialog_construct): Added appropriate border 
	width to the folder selection dialog. Fixes 41022, 41146, 41147, 
	41010, partially fixes 41025. 


2003-04-21  Anna Marie Dirks  <anna@ximian.com>

	* glade/evolution-startup-wizard.glade: Added spacing/padding to 
	first-run dialog. Fixes 41242. 	

2003-04-21  Anna Marie Dirks  <anna@ximian.com>

	* glade/e-shell-folder-creation-dialog.glade: Misc HIG-related tweaks,
	mostly spacing and padding related. Fixes 41008. 

	* e-shell-folder-creation-dialog.c (add_storage_set_view): Added
	appropriate spacing to the main vbox of the folder creation dialog.
	Partially fixes 41008.

2003-04-21  Anna Marie Dirks  <anna@ximian.com>
	
	* glade/e-shell-config-default-folders.glade: Added appropriate
	spacing/padding to the default folder pages of the settings dialog. 
	Partial fix for 41128.


2003-04-21  Anna Marie Dirks  <anna@ximian.com>

	* glade/e-active-connection-dialog.glade: Fixed padding/spacing/caps
	of the "Go Offline" dialog. Fixes 41225 and 41227. 

2003-04-18  Rodney Dawes  <dobey@ximian.com>

	* e-shell-view.c: Use PREFIX instead of EVOLUTION_DATADIR for
	bonobo_ui_util_set_ui () [#21499]
	
2003-04-17  Dan Winship  <danw@ximian.com>

	* e-shell-folder-creation-dialog.c (add_folder_types): If the
	default_type is "foo/bar" and "foo" appears in the list but
	"foo/bar" doesn't, use "foo" as the default type. [#41468] Also,
	remove a workaround for a gtk 1.2 bug.

2003-04-16  Dan Winship  <danw@ximian.com>
