@@ -393,13 +393,12 @@ create_folder_directory (ELocalStorage *local_storage,
 		parent = g_strdup_printf ("%s/", parent_path);
 		subfolders_directory_physical_path = e_path_to_physical (priv->base_path, parent);
 
-		if (! g_file_test (subfolders_directory_physical_path, G_FILE_TEST_EXISTS)) {
-			if (mkdir (subfolders_directory_physical_path, 0700) == -1) {
-				g_free (subfolders_directory_physical_path);
-				g_free (parent);
-				return errno_to_storage_result ();
-			}
+		if (mkdir (subfolders_directory_physical_path, 0700) == -1 && errno != EEXIST) {
+			g_free (subfolders_directory_physical_path);
+			g_free (parent);
+			return errno_to_storage_result ();
 		}
+
 		g_free (subfolders_directory_physical_path);
 		g_free (parent);
 	}
